<resources>
    <string name="app_name">Nilu Wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="send">Send</string>
    <string name="wallets">Wallets</string>
    <string name="receive">Receive</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="nilu">Nilu</string>
    <string name="ethereum">Ethereum</string>
    <string name="wallet">Wallet</string>
    <string name="last_update">Updated at</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="create">Create</string>
    <string name="contracts">Contracts</string>
    <string name="done">Done</string>
    <string name="address">Address</string>
    <string name="share_address">Share Address</string>
    <string name="share_copy">Copy Address</string>
    <string name="transactions">Transactions</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="amount">Amount</string>
    <string name="receiver_address">Receiver\'s Address</string>
    <string name="memo">Memo</string>
    <string name="transfer">Transfer</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="close">Close</string>
    <string name="transfer_funds_message">Transfer done! Transaction hash: %s\n\nIt takes several minutes to receive the receipt. You will be notified about it later.</string>
    <string name="msg_default_status">Place a QR inside the viewfinder rectangle to scan it.</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="fees">Fees</string>
    <string name="confirm">Confirm</string>
    <string name="fee">Fee</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="input_wallet_password">Input the wallet password</string>
    <string name="input_importing_wallet_password">Input the password of importing wallet</string>
    <string name="err_incorrect_password">Incorrect Password</string>
    <string name="destinations">Destinations</string>
    <string name="transferring">Transferring…</string>
    <string name="balance">Balance</string>
    <string name="eth">ETH</string>
    <string name="time">Time</string>
    <string name="hash">Hash</string>
    <string name="receipt">Receipt</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="block_number">Block Number</string>
    <string name="value">Value</string>
    <string name="tx_fee">Tx Fee</string>
    <string name="cumulative_gas_used">Cumulative Gas Used</string>
    <string name="gas_used">Gas Used</string>
    <string name="nonce">Nonce</string>
    <string name="wei">wei</string>
    <string name="ether">Ether</string>
    <string name="successful_transaction">Successful Transaction</string>
    <string name="unsuccessful_transaction">Unsuccessful Transaction</string>
    <string name="pending_transaction">Pending Transaction</string>
    <string name="share_receipt">Share Receipt</string>
    <string name="backup_wallet">Backup Wallet</string>
    <string name="backup">Backup</string>
    <string name="backup_wallet_title">Please backup your wallet!</string>
    <string name="backup_wallet_prompt">We highly recommend you write the mnemonic on a paper and keep it in a safe place, anyone get it can access or spend your assets. Also get start with a small amount of assets.</string>
    <string name="go_backup">Go Backup</string>
    <string name="backup_mnemonics">Backup Mnemonics</string>
    <string name="backup_mnemonics_prompt">These 12 mnemonics words are for recovering your wallet, write down correctly on a paper and keep in a safe place.</string>
    <string name="next">Next</string>
    <string name="confirm_mnemonics">Confirm Mnemonics</string>
    <string name="confirm_mnemonics_prompt">Please select mnemonic words in order and make sure your mnemonic is correctly written.</string>
    <string name="err_incorrect_mnemonic">Incorrect Mnemonic</string>
    <string name="please_wait">Please wait…</string>
    <string name="or">or</string>
    <string name="import_word">Import</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="write_mnemonics_prompt">Please enter your mnemonic words in order. Use space to separate them.</string>
    <string name="write_keystore_content_prompt">Please paste your keystore\'s JSON content here.</string>
    <string name="write_password_prompt">Please enter the keystore\'s password.</string>
    <string name="write_private_key_prompt">Please enter your private key. Private key has to be 64 characters long.</string>
    <string name="ropsten">Ropsten (Test)</string>
    <string name="err_operation_failed">Operation failed</string>
    <string name="networks">Networks</string>
    <string name="select_network">Please select a network:</string>
    <string name="current_network">Current Network</string>
    <string name="total_assets">Total Assets</string>
    <string name="nilu_rpc">https://walletapi.nilu.tech</string>
    <string name="ethereum_rpc">https://mainnet.infura.io</string>
    <string name="ropsten_rpc">https://ropsten.infura.io</string>
    <string name="contract_address">Contract Address</string>
    <string name="input_contract_address">Input the contract address</string>
    <string name="add_token">Add Token</string>
    <string name="set_password_prompt">In order to use Nilu you have to set a password for your wallets. This password will be used to create your wallets, so please choose a secure one. You can\'t backup or recover your Nilu wallets if you lose this password.</string>
    <string name="set_password">Set Password</string>
    <string name="err_invalid_password">Password must be at least 8 characters.</string>
    <string name="err_password_confirm_not_match">Password and confirmation does not match.</string>
    <string name="write_name_prompt">Please enter a name for this wallet.</string>
    <string name="tokens">Tokens</string>
    <string name="token_details">Token Details</string>
    <string name="delete">Delete</string>
    <string name="token">Token</string>
    <string name="token_information">Token Information</string>
    <string name="symbol">Symbol</string>
    <string name="total_supply">Total Supply</string>
    <string name="decimals">Decimals</string>
    <string name="rate">Rate</string>
    <string name="is_payable">Is Payable</string>
    <string name="mnemonics">Mnemonics</string>
    <string name="keystore">Keystore</string>
    <string name="private_key">Private Key</string>
    <string name="export_mnemonics">Export Mnemonics</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="export_keystore">Export Keystore</string>
    <string name="export_private_key">Export Private Key</string>
    <string name="nilu_explorer">https://walletapi.nilu.tech/</string>
    <string name="ethplorer_explorer">https://api.ethplorer.io/</string>
    <string name="err_empty_destinations">Destinations list is empty</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="err_no_wallet_specified">Please select a wallet. Create one if the list is empty.</string>
    <string name="lucky_nilu">Lucky Nilu</string>
    <string name="shake_prompt">Select a wallet and start shaking!</string>
    <string name="shake_prompt_2">Shake your device until 100% to receive Nilu. A random amount between 0.01Ɲ to 0.05Ɲ will be transferred to your wallet. There\'s a limit for the total Nilu that each user can get in a day.</string>
    <string name="success_won_lucky_nilu">Congratulations! You\'ve won %sƝ!</string>
    <string name="err_empty_recipient">Address can\'t be empty.</string>
    <string name="err_empty_amount">Amount can\'t be empty.</string>
    <string name="total">Total</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="total_incl_fee">Total (incl. Fee)</string>
    <string name="logs">Logs</string>
    <string name="read_contract">Read Contract</string>
    <string name="info">Info</string>
    <string name="nilu_description">Nilu is a blockchain-based platform with a wide range of applications. Besides providing a cryptocurrency platform, it can also be used to create tokens (ERC20) and deploying DAPPs (Decentralized Applications). Its infrastructure is the same as Ethereum, therefore it inherits Ethereum’s features and potential usages. Nilu’s core development team is primarily focused on facilitating blockchain usages for a broad range of potential users from all walks of life. Nilu is not susceptible to pre-mining due to its philosophy and lack of a predominant co-founder group or major shareholder that can potentially create a monopoly over the currency and the ecosystem. Simply by mining, buying Nilu coins or developing Nilu-based DAPPs one can become a member of Nilu community.</string>
    <string name="socials">Socials</string>
    <string name="support">Support</string>
    <string name="discord">Discord</string>
    <string name="reddit">Reddit</string>
    <string name="telegram">Telegram</string>
    <string name="email_us">Email Us</string>
    <string name="donate">Donate</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nilu_version">Nilu v%s (%s)</string>
    <string name="visit_website">Visit Website</string>
    <string name="send_email">Send Email</string>
    <string name="no_wallets">You don\'t have any wallets. Select \"Create Wallet\" from drawer to create or import a wallet.</string>
    <string name="contract">Contract</string>
    <string name="pirl">Pirl</string>
    <string name="pirl_rpc">https://rpc.pirl.minerpool.net</string>
    <string name="pirl_explorer">http://devpool.nilu.tech/pirl/</string>
    <string name="create_erc20_token">Create ERC20 Token</string>
    <string name="creator">Creator</string>
    <string name="creator_colon">Creator:</string>
    <string name="deploy">Deploy</string>
    <string name="data">Data</string>
    <string name="data_colon">Data:</string>
    <string name="err_empty_name">Name can\'t be empty.</string>
    <string name="err_empty_symbol">Symbol can\'t be empty.</string>
    <string name="err_empty_decimals">Decimals can\'t be empty.</string>
    <string name="err_empty_supply">Supply can\'t be empty.</string>
    <string name="deploying">Deploying %s</string>
    <string name="deployment_status">Deployment Status</string>
    <string name="token_deployment_prompt_1">Your token deployed successfully. However, in order to use it the creator should activate it.</string>
    <string name="token_deployment_prompt_2">You can find your token in Add Token page in your wallet.</string>
    <string name="token_deployment_caution">CAUTION: ANY ATTEMPTS TO INTERACT WITH THIS TOKEN BEFORE IT\'S ACTIVATION MAY RESULT IN LOSING ASSETS.</string>
    <string name="successful_deployment">Successful Deployment</string>
    <string name="register_domain_description">You can choose a \'.me.nilu\' domain for your wallet on Nilu. If you do, other people will be able to transfer assets to you by this address:</string>
    <string name="find_domain">Find NNS Domain</string>
    <string name="me_nilu">.me.nilu</string>
    <string name="search_domains">Search Domains</string>
    <string name="owner">Owner</string>
    <string name="resolver">Resolver</string>
    <string name="status">Status</string>
    <string name="request_domain">Request Domain</string>
    <string name="domain">Domain</string>
    <string name="get_app_id">App ID</string>
    <string name="ether1">Ether-1</string>
</resources>