<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_send"
        android:icon="@drawable/ic_send_black_24dp"
        android:orderInCategory="0"
        android:title="@string/send"
        app:showAsAction="always"/>
    <item
        android:id="@+id/navigation_wallets"
        android:icon="@drawable/ic_wallets_black_24dp"
        android:orderInCategory="1"
        android:title="@string/wallets"
        app:showAsAction="always"/>
    <item
        android:id="@+id/navigation_receive"
        android:icon="@drawable/ic_receive_black_24dp"
        android:orderInCategory="2"
        android:title="@string/receive"
        app:showAsAction="always"/>
</menu>