<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.more.AboutActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNiluVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/nilu_version"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="?attr/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/nilu_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_double"
                android:gravity="start|center_vertical"
                android:text="@string/socials"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="?attr/colorPrimary" />

            <Button
                android:id="@+id/btnDiscord"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_double"
                android:gravity="start|center_vertical"
                android:text="@string/discord" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:drawable/divider_horizontal_bright" />

            <Button
                android:id="@+id/btnTelegram"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_double"
                android:gravity="start|center_vertical"
                android:text="@string/telegram" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:drawable/divider_horizontal_bright" />

            <Button
                android:id="@+id/btnReddit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_double"
                android:gravity="start|center_vertical"
                android:text="@string/reddit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_double"
                android:gravity="start|center_vertical"
                android:text="@string/support"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="?attr/colorPrimary" />

            <Button
                android:id="@+id/btnVisitWebsite"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_double"
                android:gravity="start|center_vertical"
                android:text="@string/visit_website" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:drawable/divider_horizontal_bright" />

            <Button
                android:id="@+id/btnSendEmail"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_double"
                android:gravity="start|center_vertical"
                android:text="@string/send_email" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:drawable/divider_horizontal_bright" />

            <Button
                android:id="@+id/btnDonate"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_double"
                android:gravity="start|center_vertical"
                android:text="@string/donate" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:drawable/divider_horizontal_bright" />

            <Button
                android:id="@+id/btnPrivacyPolicy"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_double"
                android:gravity="start|center_vertical"
                android:text="@string/privacy_policy" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>