<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.wallets.nns.SearchDomainsActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:contentPaddingBottom="@dimen/spacing_normal"
            app:contentPaddingLeft="@dimen/activity_horizontal_margin"
            app:contentPaddingRight="@dimen/activity_horizontal_margin"
            app:contentPaddingTop="@dimen/spacing_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:lineSpacingExtra="@dimen/spacing_micro"
                    android:text="@string/register_domain_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/domainTextLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:errorEnabled="true"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/domainText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:hint="@string/find_domain"
                            android:imeOptions="actionSearch"
                            android:inputType="textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:background="@android:color/darker_gray"
                        android:gravity="center"
                        android:minWidth="72dp"
                        android:text="@string/me_nilu"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                </LinearLayout>

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_micro"
                    android:text="@string/search_domains"
                    android:textAllCaps="true"
                    android:theme="@style/ColoredButton" />

                <TextView
                    android:id="@+id/nodeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:minHeight="48dp"
                    android:text="@string/domain"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:drawable/divider_horizontal_bright" />

                <TextView
                    android:id="@+id/ownerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="middle"
                    android:gravity="start|center_vertical"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    android:text="@string/owner"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:drawable/divider_horizontal_bright" />

                <TextView
                    android:id="@+id/resolverText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="middle"
                    android:gravity="start|center_vertical"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    android:text="@string/resolver"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:drawable/divider_horizontal_bright" />

                <TextView
                    android:id="@+id/statusText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:minHeight="48dp"
                    android:text="@string/status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <Button
                    android:id="@+id/requestButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_micro"
                    android:enabled="false"
                    android:text="@string/request_domain"
                    android:textAllCaps="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>
